Remove TopSystemBarButton and AssistantButton
- Replace custom buttons with reference implementation
- Set allowlisted activitys on resume (since cleared on pause)

Bug: 352798854
Test: manual
Flag: NONE refactor
Change-Id: Ibedfd1c8022f62b5baf570b9554ccf9ac765b728

--- a/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/layout/car_bottom_system_bar_dock.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/layout/car_bottom_system_bar_dock.xml
@@ -63,8 +63,7 @@
                 android:layout_height="wrap_content" />
         </com.android.systemui.car.systembar.element.layout.CarSystemBarFrameLayout>
 
-        <!-- TODO(b/255887799): Use AssistantButton instead of CarUiAssistantButton once is fixed.     -->
-        <com.android.systemui.car.systembar.CarUiAssistantButton
+        <com.android.systemui.car.systembar.AssistantButton
             android:id="@+id/assist"
             style="@style/SystemBarButtonWithDock"
             systemui:icon="@drawable/car_ic_mic"
