--- a/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/layout/car_bottom_system_bar.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/layout/car_bottom_system_bar.xml
@@ -57,8 +57,7 @@
                 systemui:intent="intent:#Intent;action=com.android.car.carlauncher.ACTION_APP_GRID;package=com.android.car.portraitlauncher;launchFlags=0x24000000;end"
                 systemui:clearBackStack="false"/>
 
-            <!-- TODO(b/255887799): Use AssistantButton instead of CarUiAssistantButton once is fixed.     -->
-            <com.android.systemui.car.systembar.CarUiAssistantButton
+            <com.android.systemui.car.systembar.AssistantButton
                 android:id="@+id/assist"
                 style="@style/SystemBarButton"
                 systemui:icon="@drawable/car_ic_mic"
