--- a/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/layout/car_top_system_bar.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/layout/car_top_system_bar.xml
@@ -81,11 +81,10 @@
                 android:layout_gravity="center"
                 systemui:controller="com.android.systemui.car.statusicon.ui.StatusBarSensorInfoController"/>
 
-            <com.android.systemui.car.systembar.CarTopSystemBarButton
+            <com.android.systemui.car.systembar.CarSystemBarButton
                 android:id="@+id/user_name"
                 style="@style/CarTopSystemBarButton"
-                android:background="@drawable/status_icon_background"
-                systemui:intent="intent:#Intent;component=com.android.car.settings/.profiles.ProfileSwitcherActivity;launchFlags=0x24000000;end" >
+                android:background="@drawable/status_icon_background" >
                 <ImageView
                     android:id="@+id/user_avatar"
                     android:layout_gravity="center"
@@ -94,7 +93,7 @@
                     android:src="@drawable/car_ic_user_icon"
                     android:tint="@color/system_bar_icon_color_with_selection"
                 />
-            </com.android.systemui.car.systembar.CarTopSystemBarButton>
+            </com.android.systemui.car.systembar.CarSystemBarButton>
         </LinearLayout>
     </RelativeLayout>
 </com.android.systemui.car.systembar.CarSystemBarView>
