Make media card compatible with standard custom actions
Bug: 357877537
Test: Manual
Flag: com.android.car.carlauncher.media_card_fullscreen

Change-Id: I2131ddb8917fc9b803896691994533e8944b974b

--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/layout/control_bar_media_card.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/layout/control_bar_media_card.xml
@@ -218,6 +218,9 @@
             android:background="@drawable/left_half_pill_button_shape"
             android:src="@drawable/ic_skip_previous"
             android:tint="@color/car_on_surface_variant"
+            android:scaleType="fitCenter"
+            android:padding="@dimen/control_bar_media_card_playback_button_icon_padding"
+            android:cropToPadding="true"
             android:backgroundTint="@color/car_surface_container_highest"
             app:layout_constraintStart_toEndOf="@id/play_pause_button"
             app:layout_constraintBottom_toBottomOf="@id/play_pause_button"
@@ -231,6 +234,9 @@
             android:background="@drawable/right_half_pill_button_shape"
             android:src="@drawable/ic_skip_next"
             android:tint="@color/car_on_surface_variant"
+            android:scaleType="fitCenter"
+            android:padding="@dimen/control_bar_media_card_playback_button_icon_padding"
+            android:cropToPadding="true"
             android:backgroundTint="@color/car_surface_container_highest"
             app:layout_goneMarginStart="@dimen/media_card_view_separation_margin"
             app:layout_constraintStart_toEndOf="@id/playback_action_id1"
@@ -244,7 +250,7 @@
             android:layout_marginEnd="@dimen/control_bar_media_card_view_end_margin"
             android:src="@drawable/ic_queue"
             android:tint="@color/control_bar_media_card_panel_button_foreground"
-            android:background="@drawable/dark_circle_button_background"
+            android:background="@drawable/circle_button_background"
             android:backgroundTint="@color/control_bar_media_card_panel_button_background"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintEnd_toStartOf="@id/history_button"
@@ -258,7 +264,7 @@
             android:layout_marginEnd="@dimen/media_card_view_separation_margin"
             android:src="@drawable/ic_history"
             android:tint="@color/control_bar_media_card_panel_button_foreground"
-            android:background="@drawable/dark_circle_button_background"
+            android:background="@drawable/circle_button_background"
             android:backgroundTint="@color/control_bar_media_card_panel_button_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
