--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/values/dimens.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/values/dimens.xml
@@ -69,5 +69,6 @@
     <dimen name="control_bar_media_card_history_item_width_active">316dp</dimen>
     <dimen name="control_bar_media_card_history_item_width_inactive">160dp</dimen>
     <dimen name="control_bar_media_card_subtitle_top_margin">8dp</dimen>
+    <dimen name="control_bar_media_card_playback_button_icon_padding">20dp</dimen>
 
 </resources>
