Add data subscription popup for portrait target
Bug: 343473769
Test: manual

Merged-In: Ic7aed85b708d7dc82e49319a242c5dc204d3316e
Change-Id: Ic7aed85b708d7dc82e49319a242c5dc204d3316e

--- a/car_product/car_ui_portrait/apps/CarUiPortraitSettings/res/values/dimens.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitSettings/res/values/dimens.xml
@@ -20,4 +20,6 @@
     <dimen name="top_level_menu_width">400dp</dimen>
     <dimen name="top_level_recyclerview_margin_right">@*android:dimen/car_padding_2</dimen>
     <dimen name="top_level_foreground_icon_inset">8dp</dimen>
+
+    <dimen name="colored_two_action_switch_preference_margin_end">16dp</dimen>
 </resources>
