--- a/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/values/dimens.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/values/dimens.xml
@@ -20,7 +20,7 @@
 
     <dimen name="car_quick_controls_footer_button_vertical_margin">10dp</dimen>
     <dimen name="car_quick_controls_footer_button_horizontal_margin">24dp</dimen>
-    <dimen name="car_quick_controls_footer_button_min_height">56dp</dimen>
+    <dimen name="car_quick_controls_footer_button_min_height">88dp</dimen>
     <dimen name="car_quick_controls_footer_button_radius">@dimen/car_portrait_ui_button_radius</dimen>
     <dimen name="car_quick_controls_entry_points_start_margin">24dp</dimen>
     <dimen name="car_profile_switcher_padding_top">16dp</dimen>
@@ -120,4 +120,11 @@
     <dimen name="pin_pad_key_height">108dp</dimen>
     <dimen name="pin_pad_key_margin">10dp</dimen>
     <dimen name="lock_pattern_dot_size">32dp</dimen>
+
+    <!-- ****** Data subscription popup dimens ***** -->
+    <dimen name="data_subscription_pop_up_horizontal_offset">120dp</dimen>
+    <dimen name="data_subscription_pop_up_vertical_offset">14dp</dimen>
+    <dimen name="data_subscription_pop_up_button_width">240dp</dimen>
+    <dimen name="data_subscription_pop_up_radius">48dp</dimen>
+    <dimen name="data_subscription_pop_up_arrow_offset">140dp</dimen>
 </resources>
