--- a/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/layout/car_qc_entry_points_button.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/layout/car_qc_entry_points_button.xml
@@ -23,5 +23,14 @@
         android:layout_height="@dimen/top_system_bar_qc_icon_drawing_size"
         android:layout_gravity="center"
         android:tag="@string/qc_icon_tag"/>
+    <ImageView
+        android:id="@+id/qc_icon_button_unseen_icon"
+        android:layout_width="@dimen/car_quick_controls_entry_points_button_width"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:src="@drawable/car_qc_icon_button_unseen_indicator"
+        android:scaleType="fitCenter"
+        android:clickable="false"
+        android:visibility="gone"/>
 </FrameLayout>
 
