--- a/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/layout/qc_profile_switcher.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/layout/qc_profile_switcher.xml
@@ -43,7 +43,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    app:localQCProvider="com.android.systemui.car.qc.CarUiPortraitProfileSwitcher"/>
+                    app:localQCProvider="com.android.systemui.car.qc.ProfileSwitcher"/>
             </ScrollView>
             <com.android.systemui.car.qc.QCFooterButton
                 android:id="@+id/qc_profile_footer_button"
