Update AppStyledView UI on RB
Bug: 354740551
Test: Manual - Usage & Diagnostics screen via Car/Settings
Flag: EXEMPT resource only update

Updates:
- nav bar color to be light themed
- X button container to be left aligned
- nav bar to be on top of AppStyledView instead of side
- larger rounded corners

Change-Id: Ic671f2c9532d1b1aba1bc7fbd5c8c1ba585c57fb

--- a/car_product/car_ui_portrait/rro/car-ui-customizations/res/xml/overlays.xml
+++ b/car_product/car_ui_portrait/rro/car-ui-customizations/res/xml/overlays.xml
@@ -40,6 +40,7 @@
     <item target="dimen/car_ui_dialog_edittext_margin_top" value="@dimen/car_ui_dialog_edittext_margin_top"/>
     <item target="dimen/car_ui_list_item_text_no_icon_start_margin" value="@dimen/car_ui_list_item_text_no_icon_start_margin"/>
 
+    <item target="drawable/car_ui_app_styled_view_background" value="@drawable/car_ui_app_styled_view_background" />
     <item target="drawable/car_ui_recyclerview_ic_up" value="@drawable/car_ui_recyclerview_ic_up" />
     <item target="drawable/car_ui_recyclerview_ic_down" value="@drawable/car_ui_recyclerview_ic_down" />
     <item target="drawable/car_ui_recyclerview_scrollbar_thumb" value="@drawable/car_ui_recyclerview_scrollbar_thumb" />
