--- a/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/layout/qc_status_icons_horizontal.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/layout/qc_status_icons_horizontal.xml
@@ -86,4 +86,21 @@
             android:src="@drawable/car_ic_brightness"
             android:contentDescription="@string/status_icon_display_status"/>
     </com.android.systemui.car.systembar.CarSystemBarPanelButtonView>
+    <com.android.systemui.car.systembar.CarSystemBarPanelButtonView
+        android:id="@+id/volume_panel_button"
+        android:orientation="horizontal"
+        android:gravity="center"
+        style="@style/TopBarButton"
+        systemui:panelLayoutRes="@layout/qc_volume_panel"
+        systemui:disabledWhileUnprovisioned="true"
+        systemui:systemBarDisable2Flags="quickSettings">
+        <com.android.systemui.car.statusicon.StatusIconView
+            android:id="@+id/volume_status_icon"
+            android:layout_width="@dimen/top_system_bar_qc_icon_drawing_size"
+            android:layout_height="@dimen/top_system_bar_qc_icon_drawing_size"
+            android:layout_gravity="center"
+            android:tint="@color/car_status_icon_color"
+            android:duplicateParentState="true"
+            systemui:controller="com.android.systemui.car.statusicon.ui.MediaVolumeStatusIconController"/>
+    </com.android.systemui.car.systembar.CarSystemBarPanelButtonView>
 </LinearLayout>
