Enable show_ime_with_hard_keyboard by default on auto
Flag: EXEMPT refactor

Bug: 358392464
Test: Manually verified as follows
 1. adb shell settings get --user 10  \
     secure show_ime_with_hard_keyboard
    -> 1
 2. adb shell cmd overlay lookup     \
     com.android.providers.settings  \
     com.android.providers.settings:bool/def_show_ime_with_hard_keyboard
Change-Id: I481777164836ef1de29c40f20efcd0f98eafbc73

--- a/car_product/rro/overlay-config/SettingsProviderRRO/res/values/defaults.xml
+++ b/car_product/rro/overlay-config/SettingsProviderRRO/res/values/defaults.xml
@@ -30,6 +30,10 @@
     <!-- Default for UI touch sounds disabled -->
     <bool name="def_sound_effects_enabled">false</bool>
 
+    <!-- Allow users to use both the on-screen keyboard, as well as a real
+         keyboard -->
+    <bool name="def_show_ime_with_hard_keyboard">true</bool>
+
     <!-- Initial value for the Settings.Secure.IMMERSIVE_MODE_CONFIRMATIONS setting,
          which is a comma separated list of packages that no longer need confirmation
          for immersive mode.
