Ensure access to kitchen sink notification bottom buttons
When HUN window is bottom aligned, bottom buttons in kitchensink's
notification activity are covered.

This change adds a space to bottom of kitchensink's notification activity

Fixes: 306320917
Flag: EXEMPT bugfix
Test: manual
Change-Id: I63c62c1dfe27fd7f30b8f92ee3d8d8a9af8cfdf8

--- a/tests/EmbeddedKitchenSinkApp/res/layout/notification_fragment.xml
+++ b/tests/EmbeddedKitchenSinkApp/res/layout/notification_fragment.xml
@@ -346,5 +346,18 @@
                 android:text="Car Information"
                 android:textSize="30sp"/>
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:background="#663333">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Some space added to the bottom to allow buttons to be touchable
+                while heads up notification(s) are active."
+                android:layout_marginTop="100dp"
+                android:layout_marginBottom="100dp"/>
+        </LinearLayout>
     </LinearLayout>
 </ScrollView>
