--- a/car_product/rro/oem-design-tokens/OEMDesignTokenBase/src/main/res/values/dimens.xml
+++ b/car_product/rro/oem-design-tokens/OEMDesignTokenBase/src/main/res/values/dimens.xml
@@ -15,6 +15,7 @@
   limitations under the License.
 -->
 <resources>
+    <dimen name="shape_corner_none">0dp</dimen>
     <dimen name="shape_corner_extra_small">8dp</dimen>
     <dimen name="shape_corner_small">16dp</dimen>
     <dimen name="shape_corner_medium">24dp</dimen>
