--- a/car_product/rro/oem-design-tokens/OEMDesignTokenRRO/src/main/res/values/styles.xml
+++ b/car_product/rro/oem-design-tokens/OEMDesignTokenRRO/src/main/res/values/styles.xml
@@ -114,5 +114,29 @@
         <item name="com.android.oem.tokens:colorNeutralVariantPalette95">@color/color_neutral_variant_palette_95</item>
         <item name="com.android.oem.tokens:colorNeutralVariantPalette99">@color/color_neutral_variant_palette_99</item>
         <item name="com.android.oem.tokens:colorNeutralVariantPalette100">@color/color_neutral_variant_palette_100</item>
+
+        <item name="com.android.oem.tokens:textAppearanceDisplayLarge">@style/TextAppearance.Display.Large</item>
+        <item name="com.android.oem.tokens:textAppearanceDisplayMedium">@style/TextAppearance.Display.Medium</item>
+        <item name="com.android.oem.tokens:textAppearanceDisplaySmall">@style/TextAppearance.Display.Small</item>
+        <item name="com.android.oem.tokens:textAppearanceHeadlineLarge">@style/TextAppearance.Headline.Large</item>
+        <item name="com.android.oem.tokens:textAppearanceHeadlineMedium">@style/TextAppearance.Headline.Medium</item>
+        <item name="com.android.oem.tokens:textAppearanceHeadlineSmall">@style/TextAppearance.Headline.Small</item>
+        <item name="com.android.oem.tokens:textAppearanceTitleLarge">@style/TextAppearance.Title.Large</item>
+        <item name="com.android.oem.tokens:textAppearanceTitleMedium">@style/TextAppearance.Title.Medium</item>
+        <item name="com.android.oem.tokens:textAppearanceTitleSmall">@style/TextAppearance.Title.Small</item>
+        <item name="com.android.oem.tokens:textAppearanceLabelLarge">@style/TextAppearance.Label.Large</item>
+        <item name="com.android.oem.tokens:textAppearanceLabelMedium">@style/TextAppearance.Label.Medium</item>
+        <item name="com.android.oem.tokens:textAppearanceLabelSmall">@style/TextAppearance.Label.Small</item>
+        <item name="com.android.oem.tokens:textAppearanceBodyLarge">@style/TextAppearance.Body.Large</item>
+        <item name="com.android.oem.tokens:textAppearanceBodyMedium">@style/TextAppearance.Body.Medium</item>
+        <item name="com.android.oem.tokens:textAppearanceBodySmall">@style/TextAppearance.Body.Small</item>
+
+        <item name="com.android.oem.tokens:shapeCornerNone">@dimen/shape_corner_none</item>
+        <item name="com.android.oem.tokens:shapeCornerExtraSmall">@dimen/shape_corner_extra_small</item>
+        <item name="com.android.oem.tokens:shapeCornerSmall">@dimen/shape_corner_small</item>
+        <item name="com.android.oem.tokens:shapeCornerMedium">@dimen/shape_corner_medium</item>
+        <item name="com.android.oem.tokens:shapeCornerLarge">@dimen/shape_corner_large</item>
+        <item name="com.android.oem.tokens:shapeCornerExtraLarge">@dimen/shape_corner_extra_large</item>
+        <item name="com.android.oem.tokens:shapeCornerFull">@dimen/shape_corner_full</item>
     </style>
 </resources>
