--- a/car_product/car_ui_portrait/rro/android/res/values/themes_device_defaults.xml
+++ b/car_product/car_ui_portrait/rro/android/res/values/themes_device_defaults.xml
@@ -49,6 +49,7 @@
         <item name="android:colorControlNormal">@color/btn_device_default</item>
         <item name="android:colorFocusedHighlight">@color/car_control_highlight</item>
         <item name="android:textColorPrimary">@color/car_on_background</item>
+        <item name="android:textColorPrimaryDisableOnly">@color/car_on_background</item>
         <item name="android:textColorPrimaryInverse">@color/car_background</item>
         <item name="android:textColorSecondary">@color/car_secondary</item>
         <item name="android:textColorSecondaryInverse">@color/car_on_secondary</item>
@@ -62,6 +63,7 @@
 
     <style name="Theme.DeviceDefault.Dialog" parent="android:Theme.Material.Dialog">
         <item name="android:textColorPrimary">@color/car_on_background</item>
+        <item name="android:textColorPrimaryDisableOnly">@color/car_on_background</item>
         <item name="android:textColorPrimaryInverse">@color/car_background</item>
         <item name="android:textColorSecondary">@color/car_secondary</item>
         <item name="android:textColorSecondaryInverse">@color/car_on_secondary</item>
@@ -115,6 +117,7 @@
         <item name="android:colorButtonNormal">@color/btn_device_default</item>
         <item name="android:background">@android:color/transparent</item>
         <item name="android:textColorPrimary">@color/car_alert_dialog_message_text_color</item>
+        <item name="android:textColorPrimaryDisableOnly">@color/car_on_background</item>
         <item name="android:textColorSecondary">@color/car_alert_dialog_message_text_color</item>
         <item name="android:textColorTertiary">@color/car_alert_dialog_message_text_color</item>
 
