Set full radius corner to arbitrarily high value
Bug: 362277135
Test: Manual
Flag: EXEMPT sample customization update

Change-Id: I572c5cfa1becd7df6b91529023d3be0d8d91a875

--- a/car_product/rro/oem-design-tokens/OEMDesignTokenBase/src/main/res/values/dimens.xml
+++ b/car_product/rro/oem-design-tokens/OEMDesignTokenBase/src/main/res/values/dimens.xml
@@ -21,5 +21,6 @@
     <dimen name="shape_corner_medium">24dp</dimen>
     <dimen name="shape_corner_large">32dp</dimen>
     <dimen name="shape_corner_extra_large">48dp</dimen>
-    <dimen name="shape_corner_full">128dp</dimen>
+    <!-- Set to arbitrarily large value ensure full corner radius for shapes of all sizes-->
+    <dimen name="shape_corner_full">1000dp</dimen>
 </resources>
