--- a/car_product/rro/oem-design-tokens/OEMDesignTokenFrameworkResRRO/res/drawable/car_radio_button_checked.xml
+++ b/car_product/rro/oem-design-tokens/OEMDesignTokenFrameworkResRRO/res/drawable/car_radio_button_checked.xml
@@ -21,22 +21,24 @@
         android:left="@dimen/car_radio_button_focus_ring_padding"
         android:right="@dimen/car_radio_button_focus_ring_padding"
         android:top="@dimen/car_radio_button_focus_ring_padding">
-        <shape android:shape="oval">
+        <shape android:shape="rectangle">
             <size
                 android:width="@dimen/car_radio_button_outer_ring_size"
                 android:height="@dimen/car_radio_button_outer_ring_size" />
             <stroke
                 android:width="@dimen/car_radio_button_outer_ring_stroke_width"
                 android:color="@color/car_selection_controls_checked_color"/>
+            <corners android:radius="@dimen/car_radio_button_outer_ring_radius" />
         </shape>
     </item>
     <item android:gravity="center">
         <shape
-            android:shape="oval">
+            android:shape="rectangle">
             <size
                 android:width="@dimen/car_radio_button_inner_circle_size"
                 android:height="@dimen/car_radio_button_inner_circle_size" />
             <solid android:color="@color/car_selection_controls_checked_color"/>
+            <corners android:radius="@dimen/car_radio_button_inner_ring_radius" />
         </shape>
     </item>
     <item
